--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NEXT_PUBLIC_GIT_SHA=$(node scripts/get-git-sha.js) next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -46,6 +46,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
