--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,21 @@
 {
-  "name": "Wedding Memories",
-  "short_name": "Wedding",
+  "name": "Guestbook",
+  "short_name": "Guestbook",
   "description": "Collect and cherish wedding memories from your guests",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
