feat: persist to dynamodb

--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-form": "^1.11.1",
     "autoprefixer": "^10.4.20",
+    "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
+    "electrodb": "^3.4.1",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
