--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --experimental-https",
+    "dev": "next dev",
     "build": "NEXT_PUBLIC_GIT_SHA=$(node scripts/get-git-sha.js) next build",
     "start": "next start",
     "lint": "next lint"
@@ -51,12 +51,13 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "nanoid": "^5.1.6",
     "next": "15.3.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "qrcode": "^1.5.4",
     "react": "^19",
-    "react-day-picker": "9.7.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
