--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "nanoid": "^5.1.6",
     "next": "15.3.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
@@ -65,7 +66,7 @@
     "stripe": "^18.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
