audio waveform and names

--- a/apps/compiler/Dockerfile
+++ b/apps/compiler/Dockerfile
@@ -1,7 +1,14 @@
 FROM node:18-alpine
 
-# Install ffmpeg
-RUN apk add --no-cache ffmpeg
+# Install ffmpeg and font packages
+RUN apk add --no-cache ffmpeg fontconfig ttf-liberation
+
+# Create fonts directory and copy custom fonts
+RUN mkdir -p /usr/share/fonts/custom
+COPY fonts/ /usr/share/fonts/custom/
+
+# Update font cache
+RUN fc-cache -f -v
 
 WORKDIR /app
 
