--- a/apps/guestbook/vercel.json
+++ b/apps/guestbook/vercel.json
@@ -1,6 +1,5 @@
 {
-    "buildCommand": "pnpm build",
-    "outputDirectory": ".next",
-    "installCommand": "pnpm install",
-    "framework": null
+    "buildCommand": "cd ../.. && pnpm build --filter=guestbook",
+    "outputDirectory": "apps/guestbook/.next",
+    "installCommand": "cd ../.. && pnpm install --frozen-lockfile"
 }
