--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,16 @@
                 ".next/**",
                 "!.next/cache/**",
                 "dist/**"
+            ],
+            "env": [
+                "STRIPE_SECRET_KEY",
+                "AWS_ACCESS_KEY_ID",
+                "AWS_SECRET_ACCESS_KEY",
+                "AWS_REGION",
+                "S3_BUCKET_NAME",
+                "COMPILER_SERVICE_URL",
+                "NEXT_PUBLIC_PROD_URL",
+                "NODE_ENV"
             ]
         },
         "dev": {
