--- a/apps/guestbook/vercel.json
+++ b/apps/guestbook/vercel.json
@@ -1,5 +1,5 @@
 {
     "buildCommand": "cd ../.. && pnpm build --filter=guestbook",
-    "outputDirectory": "apps/guestbook/.next",
+    "outputDirectory": ".next",
     "installCommand": "cd ../.. && pnpm install --frozen-lockfile"
 }
