--- a/apps/compiler/package.json
+++ b/apps/compiler/package.json
@@ -15,6 +15,7 @@
         "@aws-sdk/s3-request-presigner": "^3.817.0",
         "aws-sdk": "^2.1692.0",
         "dotenv": "^16.3.1",
+        "electrodb": "^3.4.1",
         "express": "^4.18.2",
         "fluent-ffmpeg": "^2.1.2",
         "nanoid": "^5.1.6",
