--- a/apps/compiler/fly.toml
+++ b/apps/compiler/fly.toml
@@ -7,6 +7,8 @@ app = 'compiler-wispy-haze-4097'
 primary_region = 'lhr'
 
 [build]
+  dockerfile = "./Dockerfile"
+
 
 [http_service]
   internal_port = 3001
@@ -19,3 +21,4 @@ primary_region = 'lhr'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
