--- a/apps/compiler/package.json
+++ b/apps/compiler/package.json
@@ -2,6 +2,7 @@
     "name": "compiler",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "main": "dist/index.js",
     "scripts": {
         "dev": "docker-compose -f docker-compose.dev.yml up --build",
@@ -11,9 +12,9 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.817.0",
         "@aws-sdk/client-s3": "^3.817.0",
         "@aws-sdk/s3-request-presigner": "^3.817.0",
-        "aws-sdk": "^2.1692.0",
         "dotenv": "^16.3.1",
         "electrodb": "^3.4.1",
         "express": "^4.18.2",
