--- a/apps/compiler/tsconfig.json
+++ b/apps/compiler/tsconfig.json
@@ -4,7 +4,7 @@
         "lib": [
             "ES2020"
         ],
-        "module": "commonjs",
+        "module": "ES2022",
         "declaration": true,
         "outDir": "./dist",
         "rootDir": "./src",
