--- a/apps/compiler/env.example
+++ b/apps/compiler/env.example
@@ -1,3 +1,6 @@
+# Environment (set to 'development' or 'dev' to disable inactivity timeout)
+NODE_ENV=production
+
 # AWS Configuration
 AWS_REGION=eu-west-2
 AWS_ACCESS_KEY_ID=your-access-key-id
