--- a/apps/guestbook/package.json
+++ b/apps/guestbook/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.817.0",
     "@aws-sdk/s3-request-presigner": "^3.817.0",
+    "@guestbook/shared": "workspace:*",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -45,6 +46,7 @@
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
+    "@openauthjs/openauth": "^0.4.3",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
@@ -66,9 +68,9 @@
     "stripe": "^18.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "valibot": "^1.1.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1",
-    "@guestbook/shared": "workspace:*"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
