--- a/apps/compiler/env.example
+++ b/apps/compiler/env.example
@@ -9,6 +9,7 @@ S3_BUCKET_NAME=guestbook-media-dev
 
 # Service Configuration
 PORT=3001
+COMPILER_API_KEY=
 
 # FFmpeg Configuration (optional, auto-detected by platform)
 # Docker/Linux: /usr/bin/ffmpeg (default)
