--- a/apps/guestbook/env.example
+++ b/apps/guestbook/env.example
@@ -5,3 +5,4 @@ AWS_ACCESS_KEY_ID=your_aws_access_key
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key
 AWS_REGION=eu-west-2
 COMPILER_SERVICE_URL=http://localhost:3001
+COMPILER_API_KEY=
