--- a/apps/guestbook/package.json
+++ b/apps/guestbook/package.json
@@ -13,7 +13,8 @@
     "@aws-sdk/client-s3": "^3.817.0",
     "@aws-sdk/s3-request-presigner": "^3.817.0",
     "@guestbook/shared": "workspace:*",
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@openauthjs/openauth": "^0.4.3",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -42,11 +43,10 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@stripe/stripe-js": "^7.3.0",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-form": "^1.11.1",
-    "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
-    "@openauthjs/openauth": "^0.4.3",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
@@ -56,29 +56,29 @@
     "lucide-react": "^0.454.0",
     "nanoid": "^5.1.6",
     "next": "15.3.2",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "react": "^19",
     "react-day-picker": "9.11.0",
     "react-dom": "^19",
-    "react-hook-form": "^7.54.1",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.0",
-    "sonner": "^1.7.1",
+    "react-hook-form": "^7.63.0",
+    "react-resizable-panels": "^2.1.9",
+    "recharts": "2.15.4",
+    "sonner": "^1.7.4",
     "stripe": "^18.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "valibot": "^1.1.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5"
   }
 }
