event listing with empty state

--- a/apps/guestbook/package.json
+++ b/apps/guestbook/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NEXT_PUBLIC_GIT_SHA=$(node scripts/get-git-sha.js) next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
