--- a/apps/auth/.env.example
+++ b/apps/auth/.env.example
@@ -1,5 +1,10 @@
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+FACEBOOK_LOGIN_APP_ID=
+FACEBOOK_LOGIN_APP_SECRET=
+FACEBOOK_LOGIN_REDIRECT_URI=
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
