--- a/apps/auth/.env.example
+++ b/apps/auth/.env.example
@@ -1,8 +1,8 @@
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-FACEBOOK_LOGIN_APP_ID=
-FACEBOOK_LOGIN_APP_SECRET=
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
 FACEBOOK_LOGIN_REDIRECT_URI=
 
 AWS_ACCESS_KEY_ID=
