feat: fix package update on event creation and multipart upload

--- a/apps/guestbook/cors-config.json
+++ b/apps/guestbook/cors-config.json
@@ -3,7 +3,7 @@
     {
       "AllowedHeaders": ["*"],
       "AllowedMethods": ["PUT", "POST", "GET"],
-      "AllowedOrigins": ["http://localhost:3000", "https://*.vercel.app"],
+      "AllowedOrigins": ["http://localhost:3000", "https://app.wedvi.com"],
       "ExposeHeaders": ["ETag"],
       "MaxAgeSeconds": 3000
     }
