feat: use clerk instead of rolling our own auth

--- a/apps/compiler/package.json
+++ b/apps/compiler/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "docker-compose -f docker-compose.dev.yml up --build",
+    "dev": "docker compose -f docker-compose.dev.yml up --build",
     "dev:local": "node --watch src/index.js",
     "start": "node src/index.js",
     "deploy": "bunx fly deploy",
