--- a/apps/guestbook/.env.example
+++ b/apps/guestbook/.env.example
@@ -11,4 +11,9 @@ COMPILER_SERVICE_URL=http://localhost:3001
 NODE_ENV="development"
 COMPILER_API_KEY=
 
-AUTH_SERVICE_URL
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/signup
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
