--- a/turbo.json
+++ b/turbo.json
@@ -16,10 +16,15 @@
         "NODE_ENV",
         "GOOGLE_CLIENT_ID",
         "GOOGLE_CLIENT_SECRET",
-        "AUTH_SERVICE_URL",
         "FACEBOOK_CLIENT_ID",
         "FACEBOOK_CLIENT_SECRET",
-        "COMPILER_API_KEY"
+        "COMPILER_API_KEY",
+        "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "CLERK_SECRET_KEY",
+        "NEXT_PUBLIC_CLERK_SIGN_IN_URL",
+        "NEXT_PUBLIC_CLERK_SIGN_UP_URL",
+        "NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL",
+        "NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL"
       ]
     },
     "dev": {
